# osm_input

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt
cmake/Modules/: FindCairo.cmake
config/: example.conf  thomas.conf
mapping/: OSM-Poi.xmind  icon_input.py  tagToClass.json  tagToIcon.json
src/: main.cpp
src/config/: confighelper.cpp  confighelper.h
src/debughelpers/: timer.cpp  timer.h
src/input/: filterhelper.cpp  filterhelper.h  osminputhelper.cpp  osminputhelper.h  osmpoi.cpp  osmpoi.h  populationinput.cpp  populationinput.h
src/label/: atlascreator.cpp  atlascreator.h  font.cpp  font.h  labelhelper.cpp  labelhelper.h  utf8helper.cpp  utf8helper.h
src/mapping/: mappinghelper.cpp  mappinghelper.h
src/output/: textoutputhelper.cpp  textoutputhelper.h
src/primitives/: osmpoi.cpp  osmpoi.h  tag.h
src/statistics/: poistatistics.cpp  poistatistics.h
